docker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  namespace: docker-registry
spec:
  rules:
  - host: registry-ui.zenvo.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-ui-service
            port:
              number: 5000
